--- a/MultiLenguaje/package.json
+++ b/MultiLenguaje/package.json
@@ -32,9 +32,11 @@
     "@angular-devkit/build-angular": "~0.1102.8",
     "@angular/cli": "~11.2.8",
     "@angular/compiler-cli": "~11.2.9",
+    "@types/file-saver": "^2.0.4",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^16.9.1",
     "codelyzer": "^6.0.0",
+    "file-saver": "^2.0.5",
     "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.1.0",
